--- a/themes/sc_aw_premium/layouts/_default/baseof.html
+++ b/themes/sc_aw_premium/layouts/_default/baseof.html
@@ -8,6 +8,7 @@
         {{ range .Site.Pages }}
             <li>
                 <a href="{{.Permalink}}">{{.Slug}}{{.Title}}</a>
+                {{.Params.vimeo_embed_code | safeHTML}}
             </li>
         {{ end }}
         </main>
