--- a/themes/sc_aw_premium/layouts/partials/head.html
+++ b/themes/sc_aw_premium/layouts/partials/head.html
@@ -7,6 +7,7 @@
     <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
   
     <meta name="robots" content="noindex"/>
-  
+    {{ $style := resources.Get "/sass/main.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
+    <link rel="stylesheet" href="{{ $style.Permalink }}">
   
   </head>
