--- a/themes/sc_aw_premium/layouts/_default/single.html
+++ b/themes/sc_aw_premium/layouts/_default/single.html
@@ -1,8 +1,17 @@
+{{ define "main" }}
 <div class='embed'>
     {{.Params.vimeo_embed_code | safeHTML}}
 </div>
 <div class='contact-data'>
-    <div><span>Kontakt:</span><span>{{.Params.imi__i_nazwisko }}</span></div>
-    <div><span>Telefon:</span><span><a href="tel:{{.Params.telefon}}">{{.Params.telefon}}</a></span></div>
-    <div><span>E-mail:</span><span><a href="mailto:{{.Params.email }}">{{.Params.email }}</a></span></div>
+    {{ $dirFile := path.Base .Params.contact }}
+    <!-- sam plik z rozszrzeniem -->
+    {{ $pathArr := split $dirFile "." }}
+    <!-- nazwa pliku -->
+    {{ $filename := index $pathArr 0}}
+
+    
+    <div><span>Kontakt:</span><span>{{ (index site.Data.contacts $filename).imi__i_nazwisko }}</span></div>
+    <div><span>Telefon:</span><span><a href="tel:{{ (index site.Data.contacts $filename).telefon }}">{{ (index site.Data.contacts $filename).telefon }}</a></span></div>
+    <div><span>E-mail:</span><span><a href="mailto:{{ (index site.Data.contacts $filename).email }}">{{ (index site.Data.contacts $filename).email }}</a></span></div>
 </div>
+{{end}}
