--- a/themes/sc_aw_premium/layouts/partials/head.html
+++ b/themes/sc_aw_premium/layouts/partials/head.html
@@ -7,6 +7,8 @@
     <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
   
     <meta name="robots" content="noindex"/>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@500;800&display=swap');
+    </style>
     {{ $style := resources.Get "/sass/main.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
     <link rel="stylesheet" href="{{ $style.Permalink }}">
   
