--- a/themes/sc_aw_premium/layouts/_default/baseof.html
+++ b/themes/sc_aw_premium/layouts/_default/baseof.html
@@ -5,7 +5,11 @@
            {{ $section := "premium" }}
         <ul class="logo-row">
             <li class="web-adress">www.agencjawroclawska.pl</li>
-            <li class="logo-aw"><img src="/img/logo-aw-black.jpg" alt="" /></li>
+            <li class="logo-aw"><img src="/img/logo-aw-black.svg" alt="" /></li>
+        </ul>
+        <ul class="under-main-line">
+            <li class="web-adress-small">www.xxx.pl</li>
+            <li class="claim">Lepsze SEO</li>
         </ul>
         <main id="content">
             
