--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,10 +3,7 @@ body {
 }
 main{
     display: flex;
-    flex-direction: column;
-    margin-inline-start: 5em;
-    margin-inline-end: 5em;
-    
+    flex-direction: column;    
 }
 ul{
     list-style: none;
@@ -48,19 +45,18 @@ ul{
         }
     }
 }
-
-.video-embed div {
+.vp-center div {
     position: relative;
 }
-.video-embed div:nth-child(1):before {
-        content: '';
-        position: absolute;
-        width: 70%;
-        height: 70%;
-        background: #f63d37;
-        right: -.6em;
-        bottom: 0%;
-        z-index: -1;
+.vp-center div::before {
+    content: '';
+    position: absolute;
+    width: 70%;
+    height: 70%;
+    background: #f63d37;
+    right: -1em;
+    bottom: 0%;
+    z-index: -1;
 }
 .video-embed div:nth-child(2) {
     position: absolute;
@@ -80,6 +76,9 @@ ul{
     .working-list{
         width: 10em;
     }
+}
+.working-list li:nth-child(1) {
+    color: #f63d37;
 }
 .hours{
     margin-left: auto;
@@ -107,12 +106,43 @@ ul{
     }
 }
 
+.video-embed > div:nth-child(1) > iframe:nth-child(1) {
+    width: 100%;
+    height: 100%;
+    }
+    
+    .video-embed > div:nth-child(1) {
+    height: 60vh;
+    width: 60vw;
+    }
+    
+    #content {
+    min-height: 40rem;
+    position: relative;
+    height: calc(100vh - 10rem);
+    }
+    
+    body {
+    min-height: 28rem;
+    }
+
 @media (max-width: 1366px){
     .video-embed div:nth-child(2) {
         position: relative;
     }
 }
-
+@media (max-width: 1366px){
+ul.content-list {
+    padding-inline-start: 8em;
+    padding-inline-end: 8em;
+}
+}
+@media (max-width: 1366px){
+.video-embed>div:nth-child(1) {
+    height: 70vh;
+    width: 80vw;
+}
+}
 @media (max-width: 1366px){
     .contact-section {
         width: 100%;
@@ -131,4 +161,39 @@ ul{
             }
         }
     }
+}
+@media (max-width: 850px){
+.logo-row, .under-main-line {
+    margin-inline-start: 2em;
+    margin-inline-end: 2em;
+}
+}
+
+@media (max-width: 850px) {
+ul.content-list {
+    padding-inline-start: 2em;
+    padding-inline-end: 2em;
+}
+}
+
+@media (max-width: 850px){
+.video-embed>div:nth-child(1) {
+    height: 52vh;
+    width: 90vw;
+}
+}
+@media (max-width: 525px){
+.logo-row {
+    flex-direction: column-reverse;
+    align-items: center;
+    .web-adress{
+        justify-content: center;
+    }
+    .web-adress, .logo-aw {
+        width: 100%;
+        img {
+            margin: auto;
+        }
+    }
+}
 }
